// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownContent renders correctly with Text inside 1`] = `
<DropdownContent
  className=""
  elementRef={
    Object {
      "current": <div
        class="DropdownContent-sc-1m1tfah-0 dKeZyS"
      >
        Content
      </div>,
    }
  }
>
  <Component
    className="DropdownContent-sc-1m1tfah-0 dKeZyS"
    elementRef={
      Object {
        "current": <div
          class="DropdownContent-sc-1m1tfah-0 dKeZyS"
        >
          Content
        </div>,
      }
    }
  >
    <div
      className="DropdownContent-sc-1m1tfah-0 dKeZyS"
    >
      Content
    </div>
  </Component>
</DropdownContent>
`;

exports[`DropdownContent renders correctly with a component inside 1`] = `
<DropdownContent
  className=""
  elementRef={
    Object {
      "current": <div
        class="DropdownContent-sc-1m1tfah-0 dKeZyS"
      >
        <div>
          Content
        </div>
      </div>,
    }
  }
>
  <Component
    className="DropdownContent-sc-1m1tfah-0 dKeZyS"
    elementRef={
      Object {
        "current": <div
          class="DropdownContent-sc-1m1tfah-0 dKeZyS"
        >
          <div>
            Content
          </div>
        </div>,
      }
    }
  >
    <div
      className="DropdownContent-sc-1m1tfah-0 dKeZyS"
    >
      <div>
        Content
      </div>
    </div>
  </Component>
</DropdownContent>
`;

exports[`DropdownContent renders correctly with default values 1`] = `
<DropdownContent
  className=""
  elementRef={
    Object {
      "current": <div
        class="DropdownContent-sc-1m1tfah-0 dKeZyS"
      />,
    }
  }
>
  <Component
    className="DropdownContent-sc-1m1tfah-0 dKeZyS"
    elementRef={
      Object {
        "current": <div
          class="DropdownContent-sc-1m1tfah-0 dKeZyS"
        />,
      }
    }
  >
    <div
      className="DropdownContent-sc-1m1tfah-0 dKeZyS"
    />
  </Component>
</DropdownContent>
`;
